<resources>
    <string name="app_name">EcstasyClub</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="pulseira">Pulseira</string>
    <string name="nao_usada">Não Usada</string>
    <string name="usado">USADA</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="data_de_nascimento">Data de nascimento:</string>
    <string name="logout">Logout</string>
    <string name="CameraNec">Permissao da camera é necessaria</string>
    <string name="camera">Camera</string>
    <string name="galeria">Galeria</string>
    <string name="enviar_pdf">Enviar Pdf</string>
    <string name="faturas">Faturas</string>
    <string name="info_rp">Info RP</string>
</resources>