<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/etNomePerfilC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/etEmailC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_de_nascimento"
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/etDataNascimentoC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"/>

        <TextView
            android:id="@+id/LogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="Logout"
            android:textColor="@color/purple_500"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:onClick="onClickLogout"
            android:textSize="25dp"/>

    </LinearLayout>

</FrameLayout>